# scaler-ai

./: .gitignore  Dockerfile  README.md  __init__.py  ai_training_guide.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  validate_submission.py
frontend/: __init__.py  app.js  index.html  styles.css
server/: Dockerfile  __init__.py  app.py  environment.py
tasks/: __init__.py  easy_grader.py  hard_grader.py  medium_grader.py
tasks/easy/: grader.py
tasks/extreme/: __init__.py  grader.py
tasks/hard/: grader.py
tasks/medium/: __init__.py  grader.py
tasks/tutorial/: __init__.py  grader.py
